Move utility header to its own include directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(VideoAnalysisTool C)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_BUILD_TYPE Debug)
 
+include_directories(include)
+
 add_subdirectory(analyze_color_space)
 add_subdirectory(analyze_picture_brightness)
 add_subdirectory(analyze_audio_track)
