New util + swscale for additional stuff

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -6,3 +6,4 @@ include_directories(${CAIRO_INCLUDE_DIRS})
 # Define utility libraries
 add_library(utils_timing timing.c)
 add_library(utils_graph graph.c)
+add_library(utils_parameter parameter.c)
